<resources>
    <string name="app_name">Exam</string>
    <string name="btn_entrar">Enter</string>
    <string name="hint_ingresar_nombre">Enter your name</string>
    <string name="hint_chasis">Enter chasis number</string>
    <string name="hint_marca_auto">Enter the brand of the car</string>
    <string name="hint_color_uno">Enter the color of the car</string>
    <string name="hint_color_dos">Enter another color</string>
    <string name="btn_guardar_auto">Save</string>
    <string name="hint_modelo_auto">Enter the model of the car</string>
    <string name="txt_chasis">Chasis number</string>
    <string name="txt_marca_auto">Brand name</string>
    <string name="txt_color_uno">Car principal color</string>
    <string name="txt_color_dos">Car secundary color</string>
    <string name="txt_modelo_auto">Model name</string>
    <string name="txt_anio_auto">Car year</string>
    <string name="hint_anio_auto">Enter the car year</string>
    <string name="hint_nombres">Enter the names</string>
    <string name="hint_apellidos">Enter the last names</string>
    <string name="hint_fecha_nacimiento">Enter your birthdate</string>
    <string name="hint_numero_autos">Enter the number of cars</string>
    <string name="btn_guardar_conductor">Save</string>
    <string name="switch_licencia_valida">Valid drive license?</string>
    <string name="textOn_true">Yes</string>
    <string name="textOff_false">No</string>
    <string name="txt_nombres">Names</string>
    <string name="txt_apellidos">Lastnames</string>
    <string name="txt_fecha_nacimiento">Birthdate</string>
    <string name="txt_numero_autos">Number of cars</string>
    <string name="txt_chasis_detalle">Number of chasis</string>
    <string name="txt_marca_auto_detalle">Car brand</string>
    <string name="txt_color_uno_detalle">Car principal color</string>
    <string name="txt_color_dos_detalle">Car secundary color</string>
    <string name="txt_modelo_auto_detalle">Model name</string>
    <string name="txt_anio_auto_detalle">Car year</string>
    <string name="txt_numero_autos_detalle">Number of cars</string>
    <string name="txt_fecha_nacimiento_detalle">Birthdate</string>
    <string name="txt_apellidos_detalle">Lastnames</string>
    <string name="txt_nombres_detalle">Names</string>
    <string name="btn_eliminar_auto">Delete</string>
    <string name="btn_actualizar_auto">Update</string>
    <string name="switch_licencia_valida_detalle">Valid drive license?</string>
    <string name="textOn_true_detalle">Yes</string>
    <string name="textOff_false_detalle">No</string>
    <string name="btn_eliminar_conductor">Delete</string>
    <string name="btn_actualizar_conductor">Update</string>
    <string name="btn_gestionar_autos">Car managment</string>
    <string name="btn_crear_auto">Create car</string>
    <string name="btn_crear_conductor">Create driver</string>
    <string name="btn_gestionar_conductores">Drivers managment</string>
</resources>
