<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearConductor">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombres"
            android:hint="@string/hint_nombres" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.132"
            android:contentDescription="Nombre del conductor" android:capitalize="characters"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_apellidos"
            android:hint="@string/hint_apellidos" app:layout_constraintTop_toBottomOf="@+id/txt_nombres"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.093" app:layout_constraintHorizontal_bias="0.478"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_fecha_nacimiento" android:hint="@string/hint_fecha_nacimiento"
            app:layout_constraintTop_toBottomOf="@+id/txt_apellidos" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.102"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_numero_autos"
            app:layout_constraintTop_toBottomOf="@+id/txt_fecha_nacimiento" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.126"
            android:hint="@string/hint_numero_autos"/>
    <Button
            android:text="@string/btn_guardar_conductor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_guardar_conductor" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="28dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/switch_licencia"/>
    <Switch
            android:text="@string/switch_licencia_valida"
            android:layout_width="211dp"
            android:layout_height="20dp"
            android:id="@+id/switch_licencia"
            android:textOn="@string/textOn_true" android:textOff="@string/textOff_false"
            android:splitTrack="false" android:showText="true" tools:checked="false" android:checked="false"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_numero_autos"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.505" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.169"/>
    <TextView
            android:text="@string/txt_nombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nombres" android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.27"/>
    <TextView
            android:text="@string/txt_apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_apellidos"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombres" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="28dp"
            app:layout_constraintHorizontal_bias="0.267"/>
    <TextView
            android:text="@string/txt_fecha_nacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_fecha_nacimiento" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_apellidos" app:layout_constraintHorizontal_bias="0.343"/>
    <TextView
            android:text="@string/txt_numero_autos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_autos" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/txt_fecha_nacimiento"
            app:layout_constraintHorizontal_bias="0.314"/>
</android.support.constraint.ConstraintLayout>