<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearAuto">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_chasis"
            android:hint="@string/hint_chasis" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.107"
            android:contentDescription="Chasis del auto"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombre_marca"
            android:hint="@string/hint_marca_auto" app:layout_constraintTop_toBottomOf="@+id/txt_chasis"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.07" app:layout_constraintHorizontal_bias="0.478"
            android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txt_color_uno" android:hint="@string/hint_color_uno"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombre_marca" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.101"
            android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage|textPersonName|text"
            android:ems="10"
            android:id="@+id/txt_color_dos"
            app:layout_constraintTop_toBottomOf="@+id/txt_color_uno" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.12"
            android:hint="@string/hint_color_dos" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/btn_guardar_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_guardar_auto" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="28dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_anio"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombre_modelo" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_color_dos" app:layout_constraintVertical_bias="0.17"
            android:hint="@string/hint_modelo_auto"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_anio" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombre_modelo" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.251" android:hint="@string/hint_anio_auto"/>
    <TextView
            android:text="@string/txt_chasis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_chasis" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="52dp" app:layout_constraintHorizontal_bias="0.325"/>
    <TextView
            android:text="@string/txt_marca_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nombre_marca" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_chasis" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.342"/>
    <TextView
            android:text="@string/txt_color_uno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_color_uno" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombre_marca" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.366"/>
    <TextView
            android:text="@string/txt_color_dos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_color_dos" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_color_uno" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.392"/>
    <TextView
            android:text="@string/txt_modelo_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nombre_modelo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_color_dos"
            android:layout_marginTop="32dp" app:layout_constraintHorizontal_bias="0.338"/>
    <TextView
            android:text="@string/txt_anio_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_anio"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombre_modelo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="28dp"
            app:layout_constraintHorizontal_bias="0.288"/>
</android.support.constraint.ConstraintLayout>