<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetalleConductor">
    <TextView
            android:text="@string/txt_numero_autos_detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_autos_detalle" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_fecha_nacimiento_detalle"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.314"/>
    <TextView
            android:text="@string/txt_fecha_nacimiento_detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_fecha_nacimiento_detalle"
            app:layout_constraintTop_toBottomOf="@+id/txt_apellidos_detalle" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="28dp"
            app:layout_constraintHorizontal_bias="0.343"/>
    <TextView
            android:text="@string/txt_apellidos_detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_apellidos_detalle" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombres_detalle"
            app:layout_constraintHorizontal_bias="0.267"/>
    <TextView
            android:text="@string/txt_nombres_detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nombres_detalle" android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.267"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombres_detalle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.132"
            android:contentDescription="Nombre del conductor" android:editable="false" android:clickable="false"
            app:layout_constraintHorizontal_bias="0.494"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_numero_autos_detalle"
            app:layout_constraintTop_toBottomOf="@+id/txt_fecha_nacimiento_detalle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.099"
            android:layout_marginTop="8dp" android:contextClickable="false"
            android:editable="false" app:layout_constraintHorizontal_bias="0.494"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_apellidos_detalle"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombres_detalle"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.074" app:layout_constraintHorizontal_bias="0.473"
            android:layout_marginTop="8dp" android:editable="false"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_fecha_nacimiento_detalle"
            app:layout_constraintTop_toBottomOf="@+id/txt_apellidos_detalle" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.088"
            android:layout_marginTop="8dp" android:editable="false" app:layout_constraintHorizontal_bias="0.494"/>
    <Switch
            android:text="@string/switch_licencia_valida_detalle"
            android:layout_width="204dp"
            android:layout_height="24dp"
            android:id="@+id/switch_licencia_valida_detalle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_numero_autos_detalle"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.194"
            android:textOn="@string/textOn_true_detalle" android:textOff="@string/textOff_false_detalle" android:showText="true" android:checked="true"
            tools:checked="true"/>
    <Button
            android:layout_width="106dp"
            android:layout_height="45dp"
            android:id="@+id/btn_eliminar_conductor" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/switch_licencia_valida_detalle"
            app:layout_constraintVertical_bias="0.247" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.211"
            android:text="@string/btn_eliminar_conductor"/>
    <Button
            android:text="@string/btn_actualizar_conductor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_actualizar_conductor" app:layout_constraintStart_toEndOf="@+id/btn_eliminar_conductor"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/switch_licencia_valida_detalle"
            app:layout_constraintHorizontal_bias="0.589" app:layout_constraintVertical_bias="0.245"/>
    <Button
            android:text="@string/btn_gestionar_autos"
            android:layout_width="106dp"
            android:layout_height="61dp"
            android:id="@+id/btn_gestionar_autos" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_eliminar_conductor"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.211" app:layout_constraintVertical_bias="0.3"/>
    <Button
            android:text="@string/btn_crear_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_crear_auto" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_actualizar_conductor"
            app:layout_constraintStart_toEndOf="@+id/btn_gestionar_autos"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.592"
            app:layout_constraintVertical_bias="0.409"/>
</android.support.constraint.ConstraintLayout>